Dataq on China, Italy, Sweden and South Korea

--- a/OxFordCOVID-19DataExploration.Rmd
+++ b/OxFordCOVID-19DataExploration.Rmd
@@ -171,6 +171,7 @@ df_flat <- data.frame(Date=as.Date(character()),
                      StringencyIndexForDisplay = double(),
                      ConfirmedCases = integer(),
                      ConfirmedDeaths = integer(),
+                     GrowthRate = integer(),
                      stringsAsFactors=FALSE) 
 
 str(df_flat)
@@ -221,6 +222,13 @@ for (country in top) {
     
     # cumulate the measures
     cols = colSums(df_date[measures], na.rm = TRUE)
+    
+    if (d ==1){
+      g_rate = 0
+    }
+    else{
+      g_rate = as.integer(df_date$ConfirmedCases[df_date$Date == dates[d]]-df_date$ConfirmedCases[df_date$Date == dates[1]])
+    }
 
     # add data for specified date and country to dataframe
     df_flat <- rbind(df_flat, data.frame(Date = dates[d],
@@ -242,7 +250,8 @@ for (country in top) {
                      S13_Contact.tracing = as.integer(cols['S13_Contact.tracing']),
                      StringencyIndexForDisplay = cols['StringencyIndexForDisplay'],
                      ConfirmedCases = as.integer(df_date$ConfirmedCases[df_date$Date == dates[d]]),
-                     ConfirmedDeaths = as.integer(df_date$ConfirmedDeaths[df_date$Date == dates[d]])))
+                     ConfirmedDeaths = as.integer(df_date$ConfirmedDeaths[df_date$Date == dates[d]]),
+                    GrowthRate = g_rate))
   }
 }
 
@@ -251,6 +260,7 @@ str(df_flat)
 ```
 
 ### Linear Regression
+#### Death Rate
 ```{r}
 #Replace some values to unify the units.
 df_flat$S11_Investment.in.Vaccines[df_flat$S11_Investment.in.Vaccines>1000]<-with(df_flat,S11_Investment.in.Vaccines[df_flat$S11_Investment.in.Vaccines>1000]*0.000001)
@@ -273,7 +283,14 @@ residualPlots(df_flat_model)
 
   
 ```
+#### Death Rate
+```{r}
+# Run Linear Regression model. 
+g_rate_model<-lm(GrowthRate ~ S1_School.closing+S2_Workplace.closing+S3_Cancel.public.events+S4_Close.public.transport+S5_Public.information.campaigns+S6_Restrictions.on.internal.movement+S7_International.travel.controls+S8_Fiscal.measures+S9_Monetary.measures+S10_Emergency.investment.in.health.care+S11_Investment.in.Vaccines+S12_Testing.framework+S13_Contact.tracing,  data=df_flat)
+summary(g_rate_model)
+residualPlots(g_rate_model)
 
+```
 
 ###Linear Regression #2
 
