--- a/OxFordCOVID-19DataExploration.Rmd
+++ b/OxFordCOVID-19DataExploration.Rmd
@@ -316,7 +316,7 @@ residualPlots(g_rate_model)
 
 
 ```
->>>>>>> 92edc5e559b23d4a10fed09ce1c1dc774c90deb7
+
 
 ###Linear Regression #2
 
@@ -339,13 +339,13 @@ Germany
 library(lmtest)
 library(car)
 
-df_model_Germany_1 <- lm(ConfirmedDeaths ~ S1_School.closing + S2_Workplace.closing + StringencyIndexForDisplay
-                        + S6_Restrictions.on.internal.movement + S4_Close.public.transport, data = subset(df_flat, CountryName == "Germany"))
+df_model_Germany_1 <- lm(ConfirmedDeathsFut ~ S2_Workplace.closing + S4_Close.public.transport + S8_Fiscal.measures, data = subset(df_flat, CountryName == "Germany"))
   
 summary(df_model_Germany_1)
 
-df_model_Germany_2 <- lm(ConfirmedCases ~  S1_School.closing + S2_Workplace.closing + S4_Close.public.transport
-                         + S6_Restrictions.on.internal.movement, data = subset(df_flat, CountryName == "Germany"))
+df_model_Germany_2 <- lm(ConfirmedCasesFut ~  S1_School.closing + S4_Close.public.transport
+                         + S7_International.travel.controls,
+                         data = subset(df_flat, CountryName == "Germany"))
   
 summary(df_model_Germany_2)
 ```
@@ -353,12 +353,12 @@ summary(df_model_Germany_2)
 
 US
 ```{r}
-df_model_US_1 <- lm(ConfirmedDeaths ~ S1_School.closing + S2_Workplace.closing + S10_Emergency.investment.in.health.care
-                    + S13_Contact.tracing, data = subset(df_flat, CountryName == "United States"))
-  
+df_model_US_1 <- lm(ConfirmedDeathsFut ~ S5_Public.information.campaigns + S6_Restrictions.on.internal.movement
+                    + S8_Fiscal.measures, data = subset(df_flat, CountryName == "United States"))
+
 summary(df_model_US_1)
 
-df_model_US_2 <- lm(ConfirmedCases ~ S2_Workplace.closing + S8_Fiscal.measures, data = subset(df_flat, CountryName == "United States"))
+df_model_US_2 <- lm(ConfirmedCasesFut ~ S5_Public.information.campaigns + S6_Restrictions.on.internal.movement, data = subset(df_flat, CountryName == "United States"))
   
 summary(df_model_US_2)
 ```
@@ -366,51 +366,60 @@ summary(df_model_US_2)
 UK
 
 ```{r}
-df_model_UK_1 <- lm(ConfirmedDeaths ~ S12_Testing.framework + StringencyIndexForDisplay + S11_Investment.in.Vaccines, data = subset(df_flat, CountryName == "United Kingdom"))
+df_model_UK_1 <- lm(ConfirmedDeathsFut ~ S1_School.closing  + S3_Cancel.public.events
+                         + S9_Monetary.measures + S10_Emergency.investment.in.health.care
+                         + S13_Contact.tracing
+                         + StringencyIndexForDisplay, data = subset(df_flat, CountryName == "United Kingdom"))
   
 summary(df_model_UK_1)
 
-df_model_UK_2 <- lm(ConfirmedCases ~ S8_Fiscal.measures + S11_Investment.in.Vaccines + StringencyIndexForDisplay, data = subset(df_flat, CountryName == "United Kingdom"))
+df_model_UK_2 <- lm(ConfirmedCasesFut ~ S1_School.closing + S2_Workplace.closing + S3_Cancel.public.events
+                         + S5_Public.information.campaigns
+                         + S6_Restrictions.on.internal.movement + S8_Fiscal.measures + S9_Monetary.measures
+                         + S10_Emergency.investment.in.health.care
+                         + S13_Contact.tracing
+                         + StringencyIndexForDisplay, data = subset(df_flat, CountryName == "United Kingdom"))
   
 summary(df_model_UK_2)
 ```
 
 South Korea
 ```{r}
-df_model_SouthKorea_1 <- lm(ConfirmedDeaths ~ S1_School.closing + S3_Cancel.public.events + StringencyIndexForDisplay , data = subset(df_flat, CountryName == "South Korea"))
+df_model_SouthKorea_1 <- lm(ConfirmedDeathsFut ~ S3_Cancel.public.events + S9_Monetary.measures
+                            + StringencyIndexForDisplay, data = subset(df_flat, CountryName == "South Korea"))
   
 summary(df_model_SouthKorea_1)
 
 #Adding of the variable S9_Monetary.measures changes the model and makes it the only significant variable. I was not sure what to do with it
                    
 
-df_model_SouthKorea_2 <- lm(ConfirmedCases ~ S6_Restrictions.on.internal.movement  + S8_Fiscal.measures + S9_Monetary.measures , data = subset(df_flat, CountryName == "South Korea"))
+df_model_SouthKorea_2 <- lm(ConfirmedCasesFut ~ S6_Restrictions.on.internal.movement 
+                         + S9_Monetary.measures
+                         + StringencyIndexForDisplay, data = subset(df_flat, CountryName == "South Korea"))
   
 summary(df_model_SouthKorea_2)
 ```
 
 Iran
 ```{r}
-df_model_Iran_1 <- lm(ConfirmedDeaths ~ S2_Workplace.closing + S3_Cancel.public.events + StringencyIndexForDisplay, data = subset(df_flat, CountryName == "Iran"))
+df_model_Iran_1 <- lm(ConfirmedDeathsFut ~ S1_School.closing + S3_Cancel.public.events
+                         + StringencyIndexForDisplay, data = subset(df_flat, CountryName == "Iran"))
 summary(df_model_Iran_1)
 
-df_model_Iran_2 <- lm(ConfirmedCases ~ S3_Cancel.public.events + S4_Close.public.transport + StringencyIndexForDisplay, data = subset(df_flat, CountryName == "Iran"))
+df_model_Iran_2 <- lm(ConfirmedCasesFut ~S3_Cancel.public.events
+                         + S8_Fiscal.measures + StringencyIndexForDisplay, data = subset(df_flat, CountryName == "Iran"))
 
 summary(df_model_Iran_2)
 ```
 
 India
 ```{r}
-df_model_India_1 <- lm(ConfirmedDeaths ~ S1_School.closing  + S2_Workplace.closing
-                      + S12_Testing.framework
-                       , data = subset(df_flat, CountryName == "India"))
+df_model_India_1 <- lm(ConfirmedDeathsFut ~ S12_Testing.framework + S8_Fiscal.measures, data = subset(df_flat, CountryName == "India"))
   
 summary(df_model_India_1)
 
 
-df_model_India_2 <- lm(ConfirmedCases ~ S1_School.closing + S2_Workplace.closing
-                       + S12_Testing.framework
-                       , data = subset(df_flat, CountryName == "India"))
+df_model_India_2 <- lm(ConfirmedCasesFut ~ S12_Testing.framework + S8_Fiscal.measures, data = subset(df_flat, CountryName == "India"))
   
 summary(df_model_India_2)
 
@@ -418,13 +427,13 @@ summary(df_model_India_2)
 
 Sweden
 ```{r}
-df_model_Sweden_1 <- lm(ConfirmedDeaths ~ S3_Cancel.public.events + S6_Restrictions.on.internal.movement, data = subset(df_flat, CountryName == "Sweden"))
+df_model_Sweden_1 <- lm(ConfirmedDeathsFut ~ S6_Restrictions.on.internal.movement + S7_International.travel.controls, data = subset(df_flat, CountryName == "Sweden"))
   
 summary(df_model_Sweden_1)
 
 
 
-df_model_Sweden_2 <- lm(ConfirmedCases ~ S6_Restrictions.on.internal.movement + S7_International.travel.controls, data = subset(df_flat, CountryName == "Sweden"))
+df_model_Sweden_2 <- lm(ConfirmedCasesFut ~ S6_Restrictions.on.internal.movement + S7_International.travel.controls, data = subset(df_flat, CountryName == "Sweden"))
 
 summary(df_model_Sweden_2)
 
@@ -432,45 +441,43 @@ summary(df_model_Sweden_2)
 
 China
 ```{r}
-df_model_China_1 <- lm(ConfirmedDeaths ~ S1_School.closing, data = subset(df_flat, CountryName == "China"))
+df_model_China_1 <- lm(ConfirmedDeathsFut ~S1_School.closing + S5_Public.information.campaigns
+                         + S7_International.travel.controls + S9_Monetary.measures
+                         + StringencyIndexForDisplay, data = subset(df_flat, CountryName == "China"))
 
 summary(df_model_China_1)
 
-df_model_Iran_1 <- lm(ConfirmedDeaths ~ S1_School.closing + S3_Cancel.public.events
-                      + S8_Fiscal.measures
-                      , data = subset(df_flat, CountryName == "Iran"))
-  
-summary(df_model_Iran_1)
 
-df_model_Iran_2 <- lm(ConfirmedCases ~ S8_Fiscal.measures + S1_School.closing 
-                     , data = subset(df_flat, CountryName == "Iran"))
-  
-summary(df_model_Iran_2)
 
-```
-
-df_model_China_2 <- lm(ConfirmedCases ~ S1_School.closing + S2_Workplace.closing + S8_Fiscal.measures, data = subset(df_flat, CountryName == "China"))
+df_model_China_2 <- lm(ConfirmedCasesFut ~ S2_Workplace.closing + S5_Public.information.campaigns
+                         + S7_International.travel.controls
+                         + S10_Emergency.investment.in.health.care
+                         + StringencyIndexForDisplay
+                     , data = subset(df_flat, CountryName == "China"))
   
 summary(df_model_China_2)
+
 ```
 
 
 Italy
 ```{r}
-df_model_Italy_1 <- lm(ConfirmedDeaths ~ S4_Close.public.transport+ S6_Restrictions.on.internal.movement, data = subset(df_flat, CountryName == "Italy"))
+df_model_Italy_1 <- lm(ConfirmedDeathsFut ~ S2_Workplace.closing 
+                         + S4_Close.public.transport
+                         + S8_Fiscal.measures, data = subset(df_flat, CountryName == "Italy"))
 
 summary(df_model_Italy_1)
              
 
-df_model_Italy_2 <- lm(ConfirmedCases ~ S2_Workplace.closing + StringencyIndexForDisplay, data = subset(df_flat, CountryName == "Italy"))
+df_model_Italy_2 <- lm(ConfirmedCasesFut ~ S1_School.closing + S2_Workplace.closing 
+                         + S8_Fiscal.measures, data = subset(df_flat, CountryName == "Italy"))
   
 summary(df_model_Italy_2)
 ```
 
 
-=======
 #### Growth Rate
->>>>>>> 1b8c32498ed68ef4c9a297e55ff38b65a8e1d78d
+
 ```{r}
 str(df_flat)
 # Run Linear Regression model. 
