--- a/OxFordCOVID-19DataExploration.Rmd
+++ b/OxFordCOVID-19DataExploration.Rmd
@@ -315,7 +315,7 @@ summary(g_rate_mod1)
 
 g_rate_mod3<-lm(GrowthRate ~ S1_School.closing+S2_Workplace.closing+S3_Cancel.public.events+S4_Close.public.transport+S5_Public.information.campaigns+S6_Restrictions.on.internal.movement+S7_International.travel.controls+S8_Fiscal.measures+S9_Monetary.measures+S10_Emergency.investment.in.health.care+S11_Investment.in.Vaccines+S12_Testing.framework+S13_Contact.tracing+S6_Restrictions.on.internal.movement*S7_International.travel.controls*S4_Close.public.transport+S1_School.closing*S2_Workplace.closing+S3_Cancel.public.events*S4_Close.public.transport,  data=df_flat)
 summary(g_rate_mod3)
-#residualPlots(g_rate_mod3)
+residualPlots(g_rate_mod3)
 
 ```
 #### Future Growth Rate
@@ -324,8 +324,7 @@ Looking at
 # Run Linear Regression model. 
 g_ratef_mod1<-lm(GrowthRateFut ~ S1_School.closing+S2_Workplace.closing+S3_Cancel.public.events+S4_Close.public.transport+S5_Public.information.campaigns+S6_Restrictions.on.internal.movement+S7_International.travel.controls+S8_Fiscal.measures+S9_Monetary.measures+S10_Emergency.investment.in.health.care+S11_Investment.in.Vaccines+S12_Testing.framework+S13_Contact.tracing,  data=df_flat)
 summary(g_ratef_mod1)
-#residualPlots(g_ratef_mod3)
-
+residualPlots(g_ratef_mod3)
 
 ```
 
